--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -11,12 +11,31 @@
 		<th>ID</th>
 		<th>First Name</th>
 		<th>Last Name</th>
+		<th>&nbsp;</th>
+		<th>Book ID</th>
+		<th>Title</th>
+		<th>ISBN</th>
+		<th>Publisher</th>
 	</tr>
+	<!--
 	<tr th:each="author : ${authors}">
 		<td th:text="${author.id}">123</td>
 		<td th:text="${author.firstName}">First name</td>
 		<td th:text="${author.lastName}">Last name</td>
 	</tr>
+	-->
+	<th:block th:each="author : ${authors}">
+		<tr th:each="book : ${author.books}">
+			<td th:text="${author.id}">123</td>
+			<td th:text="${author.firstName}">First name</td>
+			<td th:text="${author.lastName}">Last name</td>
+			<td>&nbsp;</td>
+			<td th:text="${book.id}">321</td>
+			<td th:text="${book.title}">Title</td>
+			<td th:text="${book.isbn}">ISBN</td>
+			<td th:text="${book.publisher.name}">Publisher</td>
+		</tr>
+	</th:block>
 </table>
 </body>
 </html>
