--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -14,8 +14,8 @@
 	</tr>
 	<tr th:each="author : ${authors}">
 		<td th:text="${author.id}">123</td>
-		<td th:text="${author.firstName}">First name</td>
-		<td th:text="${author.lastName}">Last name</td>
+		<td th:text="${author.firstName}">Joe</td>
+		<td th:text="${author.lastName}">Buck</td>
 	</tr>
 </table>
 </body>
